[gd_scene load_steps=4 format=3 uid="uid://bkwy8jcsyjpkq"]

[ext_resource type="Theme" uid="uid://b7rdkq8l5i5od" path="res://themes/menu_button_theme.tres" id="1_r0oul"]
[ext_resource type="Script" uid="uid://f7epjum2bf4w" path="res://scripts/skill_menu_button.gd" id="1_v1wbo"]
[ext_resource type="Texture2D" uid="uid://b0hipjfm1x7jj" path="res://assets/art/demons/wrath/wrath-headshot.png" id="3_h6r23"]

[node name="SkillMenuButton" type="Button"]
custom_minimum_size = Vector2(632, 80)
theme = ExtResource("1_r0oul")
theme_override_font_sizes/font_size = 32
text = "aaaaslkfd"
script = ExtResource("1_v1wbo")

[node name="PartnerIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 591.0
offset_top = -21.0
offset_right = 641.0
offset_bottom = 29.0
texture = ExtResource("3_h6r23")
expand_mode = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
